# cuEQ

./: CMakeLists.txt  Freq_analysis.py  LICENSE  Makefile  README.md
include/: audio_processor.h  compressor.h  cuEQ_processor.h  eq_config.h  wav_io.h
src/: audio_processor.cpp  compressor.cpp  cuEQ_processor.cu  main.cpp  wav_io.cpp
